test/sema/mixed-types-in-array-literal.delta.output
mixed-types-in-array-literal.delta:5:23: error: mixed element types in array literal (expected 'int', found 'null')
    var a = [1, 2, 3, null];
                      ^
